<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <EditText android:id="@+id/edit_artist_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artist_name" />
    <EditText android:id="@+id/edit_song_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:layout_below="@id/edit_artist_name"
    	android:hint="@string/song_name" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_song_name"
        android:onClick="update"
        android:text="@string/button_update" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/update"
        android:layout_alignBottom="@+id/update"
        android:layout_toRightOf="@+id/update"
        android:onClick="delete"
        android:text="@string/button_delete" />

</RelativeLayout>