<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/artist_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/artist_name" />
    <EditText android:id="@+id/song_name"
    	android:layout_weight="1"
    	android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:hint="@string/song_name" />
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/button_send"
    	android:onClick="sendMessage" />
</LinearLayout>

